--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "cross-env": "^5.2.0",
-        "electron": "^4.0.0",
-        "electron-builder": "^20.38.4",
-        "redux-devtools-extension": "^2.13.7",
-        "version-bump-prompt": "^4.2.2",
         "@babel/core": "7.1.6",
         "@ckeditor/ckeditor5-build-classic": "^11.2.0",
         "@ckeditor/ckeditor5-react": "^1.1.0",
@@ -22,9 +17,12 @@
         "case-sensitive-paths-webpack-plugin": "2.1.2",
         "chalk": "^2.4.1",
         "concurrently": "^4.1.0",
+        "cross-env": "^5.2.0",
         "css-loader": "1.0.0",
         "dotenv": "6.0.0",
         "dotenv-expand": "4.2.0",
+        "electron": "^4.0.0",
+        "electron-builder": "^20.38.4",
         "electron-devtools-installer": "^2.2.4",
         "electron-publisher-s3": "^20.17.2",
         "eslint": "5.6.0",
@@ -59,12 +57,14 @@
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.1",
+        "redux-devtools-extension": "^2.13.7",
         "redux-thunk": "^2.3.0",
         "resolve": "1.8.1",
         "sass-loader": "7.1.0",
         "style-loader": "0.23.0",
         "terser-webpack-plugin": "1.1.0",
         "url-loader": "1.1.1",
+        "version-bump-prompt": "^4.2.2",
         "wait-on": "^3.2.0",
         "webpack": "4.19.1",
         "webpack-dev-server": "3.1.9",
@@ -72,7 +72,8 @@
         "workbox-webpack-plugin": "3.6.3"
     },
     "dependencies": {
-        "electron-is-dev": "^1.0.1"
+        "electron-is-dev": "^1.0.1",
+        "nedb": "^1.8.0"
     },
     "main": "./public/electron.js",
     "scripts": {
