--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "version-bump-prompt": "^4.2.2",
         "wait-on": "^3.2.0",
         "webpack": "4.19.1",
-        "webpack-dev-server": "3.1.9",
+        "webpack-dev-server": "^3.1.9",
         "webpack-manifest-plugin": "2.0.4",
         "workbox-webpack-plugin": "3.6.3"
     },
